<resources>
    <string name="app_name">LogBook</string>
    <string name="tab_text_1">Jízdy</string>
    <string name="tab_text_2">Statistika</string>
    <string name="from">Od</string>
    <string name="to">Do</string>
    <string name="button_export">Export do CSV</string>
    <string name="label_from_destination">Z:</string>
    <string name="label_to_destination">Do:</string>
    <string name="label_distance">Vzdálenost:</string>
    <string name="label_price">Cena:</string>
    <string name="title_activity_add_drive">Přidat jízdu</string>
    <string name="button_add_drive">Přidat</string>
    <string name="text_from">Místo počátku cesty</string>
    <string name="text_from_date">Čas počátku</string>
    <string name="text_to">Místo konce cesty</string>
    <string name="text_to_date">Čas konce</string>
    <string name="text_distance">Vzdálenost (km)</string>
    <string name="text_price">Náklady na 1 km (Kč)</string>
    <string name="text_total_distance">Ujetá vzdálenost:</string>
    <string name="text_total_price">Cena celkem:</string>
    <string name="text_km">km</string>
    <string name="text_czk">Kč</string>
    <string name="google_place_api">AIzaSyBLCEaHsjBV0L0isE2vpxyre3Fi95Pxm60</string>

</resources>
